--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,69 +7,89 @@
     <title>VibeIt</title>
     <link href="assets/css/Navbar.css" rel="stylesheet" />
     <link href="assets/css/about.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="Home.css" rel="stylesheet" />
-
-
 </head>
 <body>
+    <!-- Navigation Bar -->
     <nav class="navbar">
         <ul class="navbar-nav">
             <li class="logo">
                 <a class="nav-link" href="./index.html">
-                    <img src="./Resources/VibeIt.svg" />
-                    <span class="link-text" >Vibe IT</span>
+                    <img class="logo-img" src="./assets/images/pd10-removebg-preview.png" alt="Vibe It Logo" />
+                    <span class="link-text">Vibe It</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="./index.html">
-                    <img src="icons/home.svg" alt="Home" />
+                    <img src="./assets/images/home.png" alt="Home" />
                     <span class="link-text">Home</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./About.html">
-                    <img src="icons/about.svg" alt="About us" />
+                <a class="nav-link" href="./about.html">
+                    <img src="./assets/images/about.png" alt="About us" />
                     <span class="link-text">About us</span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./Library.html">
-                    <img src="icons/library.svg" alt="Library" />
+                <a class="nav-link" href="./library.html">
+                    <img src="./assets/images/library.png" alt="Library" />
                     <span class="link-text">Library</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">
-                    <img src="icons/like.svg" alt="Rating & Review" />
-                    <span class="link-text">Rating & Review</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">
-                    <img src="icons/icons-solid.svg" alt="Request Songs" />
+                    <img src="./assets/images/home.png" alt="Request Songs" />
                     <span class="link-text">Request Songs</span>
                 </a>
             </li>
         </ul>
     </nav>
+
     <main>
+        <!-- Album Gallery -->
+        <div class="album-gallery">
+            <h1 class="MeetDev">Meet the Developers</h1>
+            <div class="album-container" id="albumContainer">
+                <div class="album">
+                    <img src="assets/images/kisses.jpg" alt="Fearless Album Cover">
+                </div>
+                <div class="album">
+                    <img src="assets/images/somi.jpg" alt="Speak Now Album Cover">
+                </div>
+                <div class="album">
+                    <img src="assets/images/preshus.jfif" alt="Red Album Cover">
+                </div>
+                <div class="album">
+                    <img src="assets/images/tonet.jpg" alt="Lover Album Cover">
+                </div>
+                <div class="album">
+                    <img src="assets/images/totol.jfif" alt="Red Album Cover">
+                </div>
+                <div class="album">
+                    <img src="assets/images/kath.jpg" alt="Red Album Cover">
+                </div>
+                <div class="album">
+                    <img src="assets/images/ranee.jpg" alt="Red Album Cover">
+                </div>
+            </div>
+        </div>
+
+        <!-- About VibeIt Section -->
         <div class="about-container">
             <div class="about-head">
-                <h1>ABOUT VibeIt</h1>
-                <p>With VibeIt, it’s easy to find the right music or podcast for every moment – on your phone, your computer, your tablet and more.
-                   There are so many tracks on VibeIt. So whether you’re behind the wheel, working out, partying or relaxing, the right music or podcast is always at your fingertips. 
-                   Choose what you want to listen to, or let VibeIt surprise you.
-                   You can also browse through the collections of friends, artists, and celebrities, or create a radio station and just sit back
-                   Soundtrack your life with VibeIt. Just Sign in & listen for free.</p>
-                <img src="./Resources/VibeIt - Music On The Go.png" />
-                <h1>A Little Info About Us!</h1>  
+                <h1>About VibeIt</h1>
+                <p>With VibeIt, it’s easy to find the right music or podcast for every moment – on your phone, your computer, your tablet and more.</p>
+                <img src="assets/images/Black and Pink Modern Coming Soon Instagram Post.png" />
+                <h1>A Little Info About Us!</h1>
             </div>
             <div class="about-body">
-                <img src="./Resources/Basim.jpg" />
+                <img src="assets/images/Beige Minimalist Business Contact Us Instagram Post.png" />
                 <div class="about-me">
-                    <pre>Hello Everyone, We are the group 2 Developers; <b>Bautista and Aminoden 
-                        together with Maranan, Totol, Lapus, Austria, Figurasin </b></pre>
-                    <p>We are Developers and Students!!</p>
+                    <pre><b>Hello Everyone, We are the group 2 Developers; </b></pre>
+                    <pre><b>Bautista, Aminoden, Maranan, Austria, Totol, Lapus, Figurasin </b></pre>
+                    <p>We are Developers and Students of BSIT 3-1!!</p>
                     <p>- 🔭 We are Currently Working on our Website.</p>
                     <p>- 🌱 We are Currently Learning Web Development</p>
                     <p>- 👯 We are Working to Collaborate with Others.</p>
@@ -80,119 +99,25 @@
             <h1>Follow us on!</h1>
             <div class="contact">
                 <div class="social">
-                    <a href=""><ion-icon name="logo-facebook" style="color:#4267B2"></ion-icon></a>
-                    <a href=""><ion-icon name="logo-instagram" style="color:#E1306C"></ion-icon></a>
-                    <a href=""><ion-icon name="logo-github" style="color:#000000"></ion-icon></a>
-                    <a href=""><ion-icon name="logo-youtube" style="color:#FF0000"></ion-icon></a>
-                    <a href=""><ion-icon name="mail-outline" style="color:#eb4f0c"></ion-icon></a>
-                    <a href=""><ion-icon name="logo-linkedin" style="color:#0072b1"></ion-icon></a>
+                    <a href=""><i class="fab fa-facebook" style="color:#4267B2;"></i></a>
+                    <a href=""><i class="fab fa-instagram" style="color:#E1306C;"></i></a>
+                    <a href=""><i class="fab fa-github" style="color:#000000;"></i></a>
+                    <a href=""><i class="fas fa-envelope" style="color:#eb4f0c;"></i></a>
+                    <a href=""><i class="fab fa-linkedin" style="color:#0072b1;"></i></a>
                 </div>
-            </div>
-        </div>  
-    </main>
-    
-    <script type="module" src="">
-    </script>
-    <script nomodule src=""></script>
-</div>
-</body>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VibeIt</title>
-    <link href="assets/css/Navbar.css" rel="stylesheet" />
-    <link href="assets/css/about.css" rel="stylesheet" />
-    <link href="Home.css" rel="stylesheet" />
 
-
-</head>
-<body>
-    <nav class="navbar">
-        <ul class="navbar-nav">
-            <li class="logo">
-                <a class="nav-link" href="./index.html">
-                    <img src="./Resources/VibeIt.svg" />
-                    <span class="link-text" >Vibe IT</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./index.html">
-                    <img src="icons/home.svg" alt="Home" />
-                    <span class="link-text">Home</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./About.html">
-                    <img src="icons/about.svg" alt="About us" />
-                    <span class="link-text">About us</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./Library.html">
-                    <img src="icons/library.svg" alt="Library" />
-                    <span class="link-text">Library</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">
-                    <img src="icons/like.svg" alt="Rating & Review" />
-                    <span class="link-text">Rating & Review</span>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">
-                    <img src="icons/icons-solid.svg" alt="Request Songs" />
-                    <span class="link-text">Request Songs</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
-    <main>
-        <div class="about-container">
-            <div class="about-head">
-                <h1>ABOUT VibeIt</h1>
-                <p>With VibeIt, it’s easy to find the right music or podcast for every moment – on your phone, your computer, your tablet and more.
-                   There are so many tracks on VibeIt. So whether you’re behind the wheel, working out, partying or relaxing, the right music or podcast is always at your fingertips. 
-                   Choose what you want to listen to, or let VibeIt surprise you.
-                   You can also browse through the collections of friends, artists, and celebrities, or create a radio station and just sit back
-                   Soundtrack your life with VibeIt. Just Sign in & listen for free.</p>
-                <img src="./Resources/VibeIt - Music On The Go.png" />
-                <h1>A Little Info About Us!</h1>  
             </div>
-            <div class="about-body">
-                <img src="./Resources/Basim.jpg" />
-                <div class="about-me">
-                    <pre>Hello Everyone, We are the group 2 Developers; <b>Bautista and Aminoden 
-                        together with Maranan, Totol, Lapus, Austria, Figurasin </b></pre>
-                    <p>We are Developers and Students!!</p>
-                    <p>- 🔭 We are Currently Working on our Website.</p>
-                    <p>- 🌱 We are Currently Learning Web Development</p>
-                    <p>- 👯 We are Working to Collaborate with Others.</p>
-                    <p>- 🥅 2025 Goals: Create more projects</p>
-                </div>
-            </div>
-            <h1>Follow us on!</h1>
-            <div class="contact">
-                <div class="social">
-                    <a href=""><ion-icon name="logo-facebook" style="color:#4267B2"></ion-icon></a>
-                    <a href=""><ion-icon name="logo-instagram" style="color:#E1306C"></ion-icon></a>
-                    <a href=""><ion-icon name="logo-github" style="color:#000000"></ion-icon></a>
-                    <a href=""><ion-icon name="logo-youtube" style="color:#FF0000"></ion-icon></a>
-                    <a href=""><ion-icon name="mail-outline" style="color:#eb4f0c"></ion-icon></a>
-                    <a href=""><ion-icon name="logo-linkedin" style="color:#0072b1"></ion-icon></a>
-                </div>
-            </div>
-        </div>  
+        </div>
     </main>
-    
-    <script type="module" src="">
+    <script>
+        // Add horizontal scroll buttons functionality
+        const albumContainer = document.getElementById("albumContainer");
+        albumContainer.addEventListener("wheel", (event) => {
+            if (event.deltaY !== 0) {
+                event.preventDefault();
+                albumContainer.scrollLeft += event.deltaY;
+            }
+        });
     </script>
-    <script nomodule src=""></script>
-</div>
 </body>
->>>>>>> origin/main
 </html>
